# MIDAS4PIL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
calib_example/: README.md
midas4pil/: __init__.py  _jit.py  cake.py  calibrant.py  geometry.py  integrate.py  io.py  optimizer.py  panels.py
midas4pil/calib_example/: CeO2_350mm_29p2keV_mask.tif  geometry_init.toml  run_calibration.py
midas4pil/calibrants/NIST/: CeO2.jcpds  LaB6.jcpds  Si.jcpds  TiO2.jcpds
midas4pil/calibrants/carbides/: SiC_3C.jcpds  WC.jcpds  ZrC.jcpds
midas4pil/calibrants/gases/: Ne.jcpds  Xe.jcpds
midas4pil/calibrants/halides/: KBr_B1.jcpds  KBr_B2.jcpds  KCl_B1.jcpds
midas4pil/calibrants/metals/: V.jcpds
midas4pil/calibrants/oxides/: EuO.jcpds  Fe3O4.jcpds
midas4pil/docs/: REFERENCE_REPORT.md  USAGE_GUIDE.md
midas4pil/gui/: __init__.py  __main__.py  calib_tab.py  crosshair.py  detectors.py  display_widget.py  help_text.py  hist_clim.py  integ_tab.py  logging_setup.py  main_window.py  mask_editor.py  worker.py
tests/: __init__.py  test_calibrant.py  test_geometry.py  test_integrate.py  test_io.py  test_optimizer.py  test_panels.py
