[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "midas4pil"
version = "1.1.3"
description = "Lightweight powder/HP diffraction reduction for Pilatus/Eiger at HPCAT, APS"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Changyong Park",  email = "cypark@anl.gov"},
    {name = "Claude Code (claude-sonnet-4-6, Anthropic AI)"},
]
keywords = ["diffraction", "powder", "high-pressure", "synchrotron", "pilatus", "eiger", "HPCAT"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "tifffile",
    "gemmi",
    "scipy",
    "numba",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest"]
gui = ["PySide6>=6.4", "matplotlib>=3.5"]


[tool.setuptools.packages.find]
where = ["."]
include = ["midas4pil*"]

[tool.setuptools.package-data]
midas4pil = ["calibrants/**/*", "gui/*.py", "docs/*", "calib_example/*"]
